gestor financeiro (html, css) iniciados

--- a/sites/gestor-financeiro/index.html
+++ b/sites/gestor-financeiro/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor financeiro</title>
+    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style/mobile.css" media="all">
 </head>
 <body>
     <header>
@@ -13,7 +15,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="main-section">
             <p>Gerencie melhor as suas finanças.</p>
             <a rel="next" target="_self" hreflang="pt-br" href="manager.html">Comece Agora!</a>
         </section>
@@ -23,11 +25,17 @@
             <p>Preencha um pequeno e simples formulário e com base nas suas respostas te diremos o seu perfil financeiro e qual o melhor planejamento para as suas finanças, além de te mostrarmos pontos a melhorar e como se manter livre de dívidas para alcançar seus objetivos e sonhos.</p>
         </article>
 
-        <a rel="next" target="_self" hreflang="pt-br" href="manager.html">Comece Agora!</a>
+        <a rel="next" target="_self" hreflang="pt-br" href="menager.html">Comece Agora!</a>
     </main>
 
     <footer>
-
+        <p>Obrigado por me visitar! Confira também meu perfil no <a target="_blank" rel="next" hreflang="pt-br" href="https://github.com/RGMenezes">Github</a> e acompanha meus projetos no meu <a target="_blank" rel="next" hreflang="pt-br" href="https://rgmenezes.github.io/portifolio/">Portifólio</a>.</p>
     </footer>
+
+
+
+    <div id="box-alert">
+
+    </div>
 </body>
 </html>
