gestor financeiro (js) iniciado

--- a/sites/gestor-financeiro/index.html
+++ b/sites/gestor-financeiro/index.html
@@ -20,12 +20,14 @@
         </article>
 
         <div class="main-button">
-            <button>Analisar finanças</button>
+            <button onclick="avancarEtapa('analise')">Analisar finanças</button>
         </div>
     </main>
 
     <footer>
         <a rel="next" target="_blank" hreflang="pt-br" href="https://rgmenezes.github.io/portifolio/"><div class="business-symbol"></div><p>Rafael Menezes</p></a>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
