gestor financeiro (html, css) versão 4

--- a/sites/gestor-financeiro/index.html
+++ b/sites/gestor-financeiro/index.html
@@ -6,14 +6,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor financeiro</title>
+    <link rel="shortcut icon" href="image/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="style/mobile.css" media="all">
 </head>
 <body>
 
+    <header id="header">
+        <div class="header-fixo">
+            <a href="#header">Gestor Financeiro</a>
+
+            <div class="header-menu">
+                <div class="menu-barra1"></div>
+
+                <div class="menu-barra2"></div>
+
+                <div class="menu-barra3"></div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <article>
+            <h1>O que fazemos?</h1>
+
+            <p>Nós analisamos o seu perfil financeiro e traçamos a melhor estratégia para você se organizar financeiramente.<br>Rápido e fácil!
+                </p>
+
+            <a href="#">Comece agora!</a>
+        </article>
+
+        <section>
+            <p>Independente da sua situação financeira, nós te ajudaremos.</p>
+
+            <img src="image/saco_de_dinheiro.png" alt="Saco de dinheiro">
+        </section>
+
+        <article>
+            <p>Aperte o botão abaixo</p>
+
+            <a href="#">Vamos lá!</a>
+            
+            <p>Otimize as suas finanças</p>
+        </article>
+    </main>
+
     <footer>
         <a rel="next" target="_blank" hreflang="pt-br" href="https://rgmenezes.github.io/portifolio/"><div class="business-symbol"></div><p>Rafael Menezes</p></a>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
