gestor financeiro (html, css, js) cronstruindo index, home pag

--- a/sites/gestor-financeiro/index.html
+++ b/sites/gestor-financeiro/index.html
@@ -15,7 +15,7 @@
         <div class="header-fixo">
             <a href="#header">Gestor Financeiro</a>
 
-            <div class="header-menu">
+            <div onclick="ativarMenu()" class="header-menu">
                 <div class="menu-barra1"></div>
 
                 <div class="menu-barra2"></div>
@@ -29,10 +29,9 @@
         <article>
             <h1>O que fazemos?</h1>
 
-            <p>Nós analisamos o seu perfil financeiro e traçamos a melhor estratégia para você se organizar financeiramente.<br>Rápido e fácil!
-                </p>
+            <p>Nós analisamos o seu perfil financeiro e traçamos a melhor estratégia para você se organizar financeiramente.<br>Rápido e fácil!</p>
 
-            <a href="#">Comece agora!</a>
+            <a rel="next" target="_self" hreflang="pt-br" href="#">Comece agora!</a>
         </article>
 
         <section>
@@ -44,7 +43,7 @@
         <article>
             <p>Aperte o botão abaixo</p>
 
-            <a href="#">Vamos lá!</a>
+            <a rel="next" target="_self" hreflang="pt-br" href="#">Vamos lá!</a>
             
             <p>Otimize as suas finanças</p>
         </article>
@@ -53,5 +52,7 @@
     <footer>
         <a rel="next" target="_blank" hreflang="pt-br" href="https://rgmenezes.github.io/portifolio/"><div class="business-symbol"></div><p>Rafael Menezes</p></a>
     </footer>
+
+    <script src="script_estilos.js"></script>
 </body>
 </html>
