gestor financeiro (html, css, js) index finalizado

--- a/sites/gestor-financeiro/index.html
+++ b/sites/gestor-financeiro/index.html
@@ -37,6 +37,13 @@
         <section>
             <p>Independente da sua situação financeira, nós te ajudaremos.</p>
 
+            <div class="main-section-background-animation">
+                <div class="design-element1"></div>
+                <div class="design-element2"></div>
+                <div class="design-element3"></div>
+                <div class="design-element4"></div>
+                <div class="design-element5"></div>
+            </div>
             <img src="image/saco_de_dinheiro.png" alt="Saco de dinheiro">
         </section>
 
