gestor financeiro (html, css, js) menu tools

--- a/sites/gestor-financeiro/index.html
+++ b/sites/gestor-financeiro/index.html
@@ -8,6 +8,7 @@
     <title>Gestor financeiro</title>
     <link rel="shortcut icon" href="image/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="style/mobile.css" media="all">
+    <link rel="stylesheet" href="style/mobile-tools.css"  media="all">
 </head>
 <body>
 
@@ -36,14 +37,6 @@
 
         <section>
             <p>Independente da sua situação financeira, nós te ajudaremos.</p>
-
-            <div class="main-section-background-animation">
-                <div class="design-element1"></div>
-                <div class="design-element2"></div>
-                <div class="design-element3"></div>
-                <div class="design-element4"></div>
-                <div class="design-element5"></div>
-            </div>
             <img src="image/saco_de_dinheiro.png" alt="Saco de dinheiro">
         </section>
 
@@ -60,6 +53,15 @@
         <a rel="next" target="_blank" hreflang="pt-br" href="https://rgmenezes.github.io/portifolio/"><div class="business-symbol"></div><p>Rafael Menezes</p></a>
     </footer>
 
-    <script src="script_estilos.js"></script>
+
+
+    <!--menu tools-->
+    <div class="menu-tools">
+        <button class="calculadora">Calculadora</button>
+        <button class="juros-simples">Juros Simples</button>
+        <button class="juros-compostos">Juros Compostos</button>
+    </div>
+
+    <script src="script_tools.js"></script>
 </body>
 </html>
