versao mobile index completa

--- a/sites/gestor-financeiro/tools/calculadora.html
+++ b/sites/gestor-financeiro/tools/calculadora.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor financeiro</title>
-    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style/mobile.css" media="all">
-    <link rel="stylesheet" href="style/mobile-tools.css"  media="all">
+    <link rel="shortcut icon" href="../image/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../style/mobile.css" media="all">
+    <link rel="stylesheet" href="../style/mobile-tools.css"  media="all">
 </head>
 <body>
 
@@ -27,26 +27,9 @@
     </header>
 
     <main>
-        <article>
-            <h1>O que fazemos?</h1>
+        <form action="#" autocomplete="on" method="get">
 
-            <p>Nós analisamos o seu perfil financeiro e traçamos a melhor estratégia para você se organizar financeiramente.<br>Rápido e fácil!</p>
-
-            <a rel="next" target="_self" hreflang="pt-br" href="#">Comece agora!</a>
-        </article>
-
-        <section>
-            <p>Independente da sua situação financeira, nós te ajudaremos.</p>
-            <img src="image/background-p.jpg" alt="fundo dinheiro">
-        </section>
-
-        <article>
-            <p>Aperte o botão abaixo</p>
-
-            <a rel="next" target="_self" hreflang="pt-br" href="#">Vamos lá!</a>
-            
-            <p>Otimize as suas finanças</p>
-        </article>
+        </form>
     </main>
 
     <footer>
@@ -57,11 +40,11 @@
 
     <!--menu tools-->
     <div class="menu-tools">
-        <a rel="next" target="_blank" hreflang="pt-br" href="tools/calculadora.html" class="calculadora">Calculadora</a>
+        <a rel="next" target="_blank" hreflang="pt-br" href="#" class="calculadora">Calculadora</a>
         <a rel="next" target="_blank" hreflang="pt-br" href="#" class="juros-simples">Juros Simples</a>
         <a rel="next" target="_blank" hreflang="pt-br" href="#" class="juros-compostos">Juros Compostos</a>
     </div>
 
-    <script src="script_tools.js"></script>
+    <script src="../script_tools.js"></script>
 </body>
 </html>
