--- a/sites/gestor-financeiro/index.html
+++ b/sites/gestor-financeiro/index.html
@@ -57,9 +57,9 @@
 
     <!--menu tools-->
     <div class="menu-tools">
-        <a rel="next" target="_blank" hreflang="pt-br" href="tools/calculadora.html" class="calculadora">Calculadora</a>
-        <a rel="next" target="_blank" hreflang="pt-br" href="#" class="juros-simples">Juros Simples</a>
-        <a rel="next" target="_blank" hreflang="pt-br" href="#" class="juros-compostos">Juros Compostos</a>
+        <a rel="next" target="_blank" hreflang="pt-br" href="tools/calculadora.html" class="button-calculadora">Calculadora</a>
+        <a rel="next" target="_blank" hreflang="pt-br" href="#" class="button-juros-simples">Juros Simples</a>
+        <a rel="next" target="_blank" hreflang="pt-br" href="#" class="button-juros-compostos">Juros Compostos</a>
     </div>
 
     <script src="script_tools.js"></script>
