inicio juros simples

--- a/sites/gestor-financeiro/tools/juros_simples.html
+++ b/sites/gestor-financeiro/tools/juros_simples.html
@@ -27,8 +27,21 @@
     </header>
 
     <main>
-        <div>
+        <div class="div-form">
+            <div>
+                <label for="capitalInicial">R$</label>
+                <input type="number" name="capitalInicial" id="capitalInicial" placeholder="Valor inicial" autocomplete="on" min="0">
+            </div>
 
+            <div>
+                <label for="taxaJuros">%</label>
+                <input type="number" name="taxaJuros" id="taxaJuros" placeholder="Juros Mensal" autocomplete="on" min="0">
+            </div>
+
+            <div>
+                <label for="tempoAplicacao">T</label>
+                <input type="number" name="tempoAplicacao" id="tempoAplicacao" placeholder="Tempo aplicado" autocomplete="on" min="0">
+            </div>
         </div>
     </main>
 
