--- a/sites/gestor-financeiro/index.html
+++ b/sites/gestor-financeiro/index.html
@@ -58,7 +58,7 @@
     <!--menu tools-->
     <div class="menu-tools">
         <a rel="next" target="_blank" hreflang="pt-br" href="tools/calculadora.html" class="button-calculadora">Calculadora</a>
-        <a rel="next" target="_blank" hreflang="pt-br" href="#" class="button-juros-simples">Juros Simples</a>
+        <a rel="next" target="_blank" hreflang="pt-br" href="tools/juros_simples.html" class="button-juros-simples">Juros Simples</a>
         <a rel="next" target="_blank" hreflang="pt-br" href="#" class="button-juros-compostos">Juros Compostos</a>
     </div>
 
