--- a/sites/gestor-financeiro/index.html
+++ b/sites/gestor-financeiro/index.html
@@ -8,7 +8,6 @@
     <title>Gestor financeiro</title>
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style/mobile.css" media="all">
-    <link rel="stylesheet" href="style/mobile-tools.css"  media="all">
 </head>
 <body>
 
@@ -59,7 +58,7 @@
     <div class="menu-tools">
         <a rel="next" target="_blank" hreflang="pt-br" href="tools/calculadora.html" class="button-calculadora">Calculadora</a>
         <a rel="next" target="_blank" hreflang="pt-br" href="tools/juros_simples.html" class="button-juros-simples">Juros Simples</a>
-        <a rel="next" target="_blank" hreflang="pt-br" href="#" class="button-juros-compostos">Juros Compostos</a>
+        <a rel="next" target="_blank" hreflang="pt-br" href="tools/juros_compostos.html" class="button-juros-compostos">Juros Compostos</a>
     </div>
 
     <script src="script_tools.js"></script>
