--- a/sites/gestor-financeiro/tools/calculadora.html
+++ b/sites/gestor-financeiro/tools/calculadora.html
@@ -8,7 +8,7 @@
     <title>Gestor financeiro</title>
     <link rel="shortcut icon" href="../image/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/mobile.css" media="all">
-    <link rel="stylesheet" href="../style/mobile-tools.css"  media="all">
+    <link rel="stylesheet" href="../style/tools.css"  media="all">
 </head>
 <body>
 
