--- a/sites/gestor-financeiro/formulario_perfil_usuario.html
+++ b/sites/gestor-financeiro/formulario_perfil_usuario.html
@@ -7,12 +7,13 @@
     <title>Gestor financeiro</title>
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style/mobile.css" media="all">
+    <link rel="stylesheet" href="style/formolario.css" media="all">
 </head>
 <body>
 
     <header id="header">
         <div class="header-fixo">
-            <a href="#header">Gestor Financeiro</a>
+            <a rel="prev" target="_self" hreflang="pt-br" href="index.html" >Gestor Financeiro</a>
 
             <div onclick="ativarMenu()" class="header-menu">
                 <div class="menu-barra1"></div>
@@ -25,26 +26,14 @@
     </header>
 
     <main>
-        <article>
-            <h1>O que fazemos?</h1>
+        <section id="alerta">
 
-            <p>Nós analisamos o seu perfil financeiro e traçamos a melhor estratégia para você se organizar financeiramente.<br>Rápido e fácil!</p>
-
-            <a rel="next" target="_self" hreflang="pt-br" href="formulario_perfil_usuario.html">Comece agora!</a>
-        </article>
-
-        <section>
-            <p>Independente da sua situação financeira, nós te ajudaremos.</p>
-            <img src="image/background-p.jpg" alt="fundo dinheiro">
         </section>
 
-        <article>
-            <p>Aperte o botão abaixo</p>
 
-            <a rel="next" target="_self" hreflang="pt-br" href="formulario_perfil_usuario.html">Vamos lá!</a>
-            
-            <p>Otimize as suas finanças</p>
-        </article>
+        <form>
+
+        </form>
     </main>
 
     <footer>
@@ -61,5 +50,6 @@
     </div>
 
     <script src="script_tools.js"></script>
+    <script src="script_formulario_perfil_usuario.js"></script>
 </body>
 </html>
