--- a/sites/gestor-financeiro/formulario_perfil_usuario.html
+++ b/sites/gestor-financeiro/formulario_perfil_usuario.html
@@ -7,7 +7,7 @@
     <title>Gestor financeiro</title>
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style/mobile.css" media="all">
-    <link rel="stylesheet" href="style/formolario.css" media="all">
+    <link rel="stylesheet" href="style/formulario.css" media="all">
 </head>
 <body>
 
@@ -26,13 +26,29 @@
     </header>
 
     <main>
-        <section id="alerta">
-
-        </section>
+        <div id="alerta">
+            <h1>ALERTA</h1>
+            <p>Todo o conteúdo deste site <strong>NÃO É</strong> uma recomendação de investimento e NÃO nos responsabilizamos por quaisquer utilização das informações aqui presentes!</p>
+            <p>Utilize essas informações apenas para pensar de uma nova ótica as suas finanças.</p>
+            <a rel="prev" target="_self" hreflang="pt-br" href="index.html"><button>Encerrar</button></a>
+            <button onclick="aceitarAlerta()">Estou ciente</button>
+        </div>
 
 
         <form>
+            <fieldset>
+                <legend>Nos diga mais sobre você.</legend>
 
+                <label for="salario">Qual o seu salário atual?</label>
+                <input type="number" name="salario" id="salario" required min="0" placeholder="Salário">
+
+                <label>Você tem alguma renda extra?</label>
+                <label for="rendaExtraSim">Tenho</label>
+                <input type="radio" name="rendaExtra" id="rendaExtraSim" checked>
+                <label for="rendaExtraNao">Não tenho</label>
+                <input type="radio" name="rendaExtra" id="rendaExtraNao">
+
+            </fieldset>
         </form>
     </main>
 
