iniciando logica formulario js

--- a/sites/gestor-financeiro/formulario_perfil_usuario.html
+++ b/sites/gestor-financeiro/formulario_perfil_usuario.html
@@ -213,7 +213,7 @@
 
             </fieldset>
 
-            <button onclick="avançarFormulario()">Avançar</button>
+            <button onclick="gerarResultado()">Avançar</button>
         </form>
     </main>
 
