distribuição do salario com base no perfil

--- a/sites/gestor-financeiro/formulario_perfil_usuario.html
+++ b/sites/gestor-financeiro/formulario_perfil_usuario.html
@@ -214,6 +214,10 @@
             </fieldset>
 
             <button onclick="gerarResultado()">Avançar</button>
+
+            <output>
+                
+            </output>
         </form>
     </main>
 
