--- a/sites/gestor-financeiro/formulario_perfil_usuario.html
+++ b/sites/gestor-financeiro/formulario_perfil_usuario.html
@@ -216,7 +216,21 @@
             <button onclick="gerarResultado()">Avançar</button>
 
             <output>
-                
+                <section>
+                    
+                </section>
+                <section>
+                    <h1>Divisão do salário</h1>
+                    <div id="grafico">
+                        <div id="despesasBasicas"></div>
+                        <div id="despesasExtras"></div>
+                        <div id="caixa"></div>
+                        <div id="investimento"></div>
+                        <div id="empreender"></div>
+                        <div id="lazer"></div>
+                        <div id="compras"></div>
+                    </div>
+                </section>
             </output>
         </form>
     </main>
