gráfico js pronto

--- a/sites/gestor-financeiro/formulario_perfil_usuario.html
+++ b/sites/gestor-financeiro/formulario_perfil_usuario.html
@@ -230,6 +230,9 @@
                         <div id="lazer"></div>
                         <div id="compras"></div>
                     </div>
+
+                    <div id="legendaGrafico">
+                    </div>
                 </section>
             </output>
         </form>
