projeto finalizado (mobile, otherScreen)

--- a/sites/gestor-financeiro/index.html
+++ b/sites/gestor-financeiro/index.html
@@ -7,8 +7,9 @@
     <title>Gestor financeiro</title>
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style/mobile.css" media="all">
+    <link rel="stylesheet" href="style/otherScreen.css" media="screen and (min-width: 769px)">
 </head>
-<body>
+<body onresize="ativarMenuOtherScreen()">
 
     <header id="header">
         <div class="header-fixo">
