--- a/sites/gestor-financeiro/tools/calculadora.html
+++ b/sites/gestor-financeiro/tools/calculadora.html
@@ -9,8 +9,9 @@
     <link rel="shortcut icon" href="../image/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/mobile.css" media="all">
     <link rel="stylesheet" href="../style/tools.css"  media="all">
+    <link rel="stylesheet" href="../style/otherScreen.css" media="screen and (min-width: 769px)">
 </head>
-<body>
+<body onresize="ativarMenuOtherScreen()">
 
     <header style="background: none; box-shadow: none; height: 100px;" id="header">
         <div class="header-fixo">
