--- a/sites/gestor-financeiro/formulario_perfil_usuario.html
+++ b/sites/gestor-financeiro/formulario_perfil_usuario.html
@@ -7,9 +7,10 @@
     <title>Gestor financeiro</title>
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style/mobile.css" media="all">
+    <link rel="stylesheet" href="style/otherScreen.css" media="screen and (min-width: 769px)">
     <link rel="stylesheet" href="style/formulario.css" media="all">
 </head>
-<body>
+<body onresize="ativarMenuOtherScreen()">
 
     <header id="header">
         <div class="header-fixo">
