--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Projetos Completos</title>
 </head>
 <body>
-    
+    <header>
+        
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
